@@ -1,8 +1,15 @@
+Tue Aug  8 11:26:54 1995  Sam Hartman  <hartmans@pao.mit.edu>
+
+	* sys_term.c: Fail if the slave side dies.
+	(dup_tty): Renamed from login_tty because OSF already has that function and it isn't compatible.
+
+	(getptyslave): Fix argument to fatalperror by including com_err.h instead of casting.
 
 Tue Aug 8 17:25:22 EDT 1995	Paul Park	(pjpark@mit.edu)
 	* sys_term.c - Cast argument to fatalperror().
 
-Mon Aug  7 18:29:21 1995  Sam Hartman  <hartmans@tertius.mit.edu>
+
+
 
 	* sys_term.c: Use new interface to pty_update_utmp.
 	(getptyslave): Handle error return from pty_open_slave
